# plavchan-gpu

./: .gitignore  README.md  __init__.py  build.sh  plavchan.cu  plavchan_periodogram.cu  pyproject.toml  python_testing.py  setup.py
plavchan_gpu/: __init__.py  plavchan_periodogram.cu  plavchan_testing.cu
plavchan_gpu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wheelhouse/: plavchan_gpu-1.0.5-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
