[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plavchan-gpu"
version = "0.1.0"
description = "GPU-accelerated Plavchan periodogram calculation"
readme = "README.md"
authors = [
    {name = "Matthew Paz", email = "matteopi314@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/yourusername/plavchan-gpu"
"Bug Tracker" = "https://github.com/yourusername/plavchan-gpu/issues"